--- a/mamba-core/build.gradle
+++ b/mamba-core/build.gradle
@@ -38,5 +38,11 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    api 'com.github.princekin-f:EasyFloat:1.3.4'
+    implementation project(path: ':mamba-ui')
+    implementation project(path: ':mamba-base')
+    implementation project(path: ':mamba-util')
+    implementation project(path: ':mamba-fps')
+    testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
